Created a new REST endpoint in the operator terminal which exposes the Janus configuration.
